module9/91-start/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: redis
  name: redis
  namespace: oefeningen
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - image: redislabs/redismod
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
